--- a/Examples/AIENGINE/DSPlib/README.html
+++ b/Examples/AIENGINE/DSPlib/README.html
@@ -22,9 +22,10 @@
 <li><a href="matlab:XmcExampleApi.getExample('matrix_multiply')">Importing Matrix Multiply from DSPLib as a block</a></li>
 <li><a href="matlab:XmcExampleApi.getExample('fir_ssr')">Using DSPLib AI Engine SSR FIR</a></li>
 <li><a href="matlab:XmcExampleApi.getExample('Dynamic_FFT')">AI Engine Dynamic Point FFT</a></li>
+<li><a href="matlab:XmcExampleApi.getExample('DUC')">Digital Upconversion (DUC)</a> using FIR interpolator blocks</li>
 </ul>
 <hr />
-<p>Copyright 2020 Xilinx</p>
+<p>Copyright 2024 Advanced Micro Devices, Inc.</p>
 <p>Licensed under the Apache License, Version 2.0 (the "License");<br />
 you may not use this file except in compliance with the License.<br />
 You may obtain a copy of the License at</p>
