--- a/README.html
+++ b/README.html
@@ -19,12 +19,11 @@ a block diagram environment for multidomain simulation and model-based design.</
 <li>Go over to the <a href="matlab:XmcExampleApi.getExample('Tutorials')">tutorials</a>. The tutorials will give you a solid understanding of how to use the tool.</li>
 <li>Browse through many of the examples we have here. You can easily access these examples from within the tool. (<strong>Note:</strong> Many of the examples require the <a href="https://www.mathworks.com/products/dsp-system.html">DSP System Toolbox</a>.)</li>
 </ul>
-<h1 id="whats-new-in-20241">What's new in 2024.1?</h1>
+<h1 id="whats-new-in-20242">What's new in 2024.2?</h1>
 <ul>
-<li>The <a href="matlab:XmcExampleApi.getExample('Normalization')">Normalization example</a> showcases two features of the AIE-ML architecture: shared buffers on memory tiles, and the <code>bfloat16</code> data type.</li>
-<li>See a <a href="matlab:XmcExampleApi.getExample('IFFT64K_2D')">64K-pt IFFT at 2 GSPS</a> implemented in AI Engine using a 2D architecture.</li>
+<li>The <a href="matlab:XmcExampleApi.getExample('Filtering_in_frequency_domain')">Filtering in Frequency Domain</a> example shows how to increase AI Engine throughput using different techniques.</li>
+<li>See a Vitis Model Composer testbench for a <a href="matlab:XmcExampleApi.getExample('Farrow_Filter')">fractional delay Farrow filter</a>.</li>
 <li>Working with both AI Engines and PL? See the <a href="matlab:XmcExampleApi.getExample('AIE-PL')">tutorials</a> showing how to connect the block libraries in Vitis Model Composer.</li>
-<li>MATLAB R2023a and R2023b are now supported by Vitis Model Composer.</li>
 </ul>
 <h1 id="examples">Examples</h1>
 <p align="center">
