--- a/Examples/AIENGINE/DualStreamSSR_FIR/README.html
+++ b/Examples/AIENGINE/DualStreamSSR_FIR/README.html
@@ -26,24 +26,14 @@ document.location=commandURI
 </html>
 <p>This model showcases a dual stream Super Sample Rate (SSR)<br />
 FIR filter to process a 16 GSPS stream built with 64 AI Engine kernels. In addition, we compare the output of the AI Engine design with a Simulink FIR filter block that we consider as our golden reference.</p>
-<p>For more details on how to build this design and some of the theoretical aspect of it click <a href="https://github.com/Xilinx/Vitis-Tutorials/tree/2024.1/AI_Engine_Development/AIE/Design_Tutorials/02-super_sampling_rate_fir/DualStreamSSR">here</a>.</p>
+<p>For more details on how to build this design and some of the theoretical aspect of it click <a href="https://github.com/Xilinx/Vitis-Tutorials/tree/2024.2/AI_Engine_Development/AIE/Design_Tutorials/02-super_sampling_rate_fir/DualStreamSSR">here</a>.</p>
 <h2 id="knowledge-nuggets">Knowledge nuggets</h2>
 <p><img width="18" height="18" src="../Images/bulb.png"> In the Model Composer Hub block select <em>"Plot AIE Simulation output and estimate throughput"</em> to see the throughput for each output signal after running aiesimulation. <br />
 <br/><br/><br />
 <br/><br/></p>
 <p><img src="./Images/DualStreamSSR.png" alt="" /></p>
 <hr />
-<p>Copyright 2021 Xilinx</p>
-<p>Licensed under the Apache License, Version 2.0 (the "License");<br />
-you may not use this file except in compliance with the License.<br />
-You may obtain a copy of the License at</p>
-<pre><code>http://www.apache.org/licenses/LICENSE-2.0
-</code></pre>
-<p>Unless required by applicable law or agreed to in writing, software<br />
-distributed under the License is distributed on an "AS IS" BASIS,<br />
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.<br />
-See the License for the specific language governing permissions and<br />
-limitations under the License.</p>
+<p>Copyright (c) 2024 Advanced Micro Devices, Inc.</p>
 
 </div>
 <style type='text/css'>body {
