--- a/Examples/AIENGINE/SingleStreamSSR_FIR/README.html
+++ b/Examples/AIENGINE/SingleStreamSSR_FIR/README.html
@@ -25,20 +25,10 @@ document.location=commandURI
               
 </html>
 <p>This model showcases a single stream super sample rate FIR filter to process a 4 GSPS stream built with 16 AI Engine kernels. In addition, we compare the output of the AI Engine design with a Simulink FIR filter block that we consider as our golden reference.</p>
-<p>For more detials on the design of the FIR kernels click <a href="https://github.com/Xilinx/Vitis-Tutorials/blob/master/AI_Engine_Development/Design_Tutorials/02-super_sampling_rate_fir/SingleStreamSSR">here</a>. </p>
+<p>For more detials on the design of the FIR kernels click <a href="https://github.com/Xilinx/Vitis-Tutorials/tree/2024.2/AI_Engine_Development/AIE/Design_Tutorials/02-super_sampling_rate_fir/SingleStreamSSR">here</a>. </p>
 <p><img src="images/SingleStreamSSR.PNG" alt="" /></p>
 <hr />
-<p>Copyright 2020 Xilinx</p>
-<p>Licensed under the Apache License, Version 2.0 (the "License");<br />
-you may not use this file except in compliance with the License.<br />
-You may obtain a copy of the License at</p>
-<pre><code>http://www.apache.org/licenses/LICENSE-2.0
-</code></pre>
-<p>Unless required by applicable law or agreed to in writing, software<br />
-distributed under the License is distributed on an "AS IS" BASIS,<br />
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.<br />
-See the License for the specific language governing permissions and<br />
-limitations under the License.</p>
+<p>Copyright (c) 2024 Advanced Micro Devices, Inc.</p>
 
 </div>
 <style type='text/css'>body {
