--- a/Examples/AIENGINE_plus_PL/AIE_HDL/AIE_HDL_multirate/README.html
+++ b/Examples/AIENGINE_plus_PL/AIE_HDL/AIE_HDL_multirate/README.html
@@ -24,7 +24,7 @@ document.location=commandURI
 <button type="button" style="background-color:#d0d028; font-size: 20px;" onclick="myFunction()">Open Design</button>  
               
 </html>
-<p><strong><em>Version: Vitis™ 2024.1 and Matlab™ R2022a with Simulink™ and the DSP System Toolbox™</em></strong></p>
+<p><strong><em>Version: Vitis™ 2024.2 and MATLAB™ R2023a with Simulink™ and the DSP System Toolbox™</em></strong></p>
 <h2 id="prerequisites">Prerequisites</h2>
 <p>This example presumes you have installed the Vitis and Vitis Model Composer tools and that you have a basic understanding of those tools.  If not, consider starting with the Vitis tutorials at <a href="https://github.com/Xilinx/Vitis-Tutorials">https://github.com/Xilinx/Vitis-Tutorials</a> and within that repository the Vitis Model Composer tutorial at <a href="https://github.com/Xilinx/Vitis-Tutorials/tree/2024.2/AI_Engine_Development/AIE/Feature_Tutorials/10-aie-dsp-lib-model-composer">https://github.com/Xilinx/Vitis-Tutorials/tree/2024.2/AI_Engine_Development/AIE/Feature_Tutorials/10-aie-dsp-lib-model-composer</a>.</p>
 <hr />
