Update Quick Guide page

--- a/QuickGuides/README.html
+++ b/QuickGuides/README.html
@@ -44,6 +44,22 @@
  </td>
  </tr>
 
+<tr>
+ <td align="left">
+   <a href="matlab:XmcExampleApi.getExample('Monitoring_Cascade_Signals')">Monitoring Cascade Signals</a>
+ </td>
+ <td>When monitoring cascade signals in an AI Engine design, not all of the samples displayed may be valid. Read this Quick Guide to learn why this is and how to determine which samples are valid.
+ </td>
+ </tr>
+
+<tr>
+ <td align="left">
+   <a href="matlab:XmcExampleApi.getExample('Running_on_Hardware')">Running on Hardware</a>
+ </td>
+ <td>Follow these instructions to move the Validate on Hardware baremetal or SD card image into the hardware and run the application.
+ </td>
+ </tr>
+
  </table>
 
         </div>
