Finalize Export to Vitis tutorial

--- a/README.html
+++ b/README.html
@@ -21,8 +21,8 @@ a block diagram environment for multidomain simulation and model-based design.</
 </ul>
 <h1 id="whats-new-in-20242">What's new in 2024.2?</h1>
 <ul>
+<li>Export AI Engine and PL subsystems as a <a href="matlab:XmcExampleApi.getExample('Export_to_Vitis')">Vitis Subsystem (VSS)</a>.</li>
 <li>The <a href="matlab:XmcExampleApi.getExample('Filtering_in_frequency_domain')">Filtering in Frequency Domain</a> example shows how to increase AI Engine throughput using different techniques.</li>
-<li>See a Vitis Model Composer testbench for a <a href="matlab:XmcExampleApi.getExample('Farrow_Filter')">fractional delay Farrow filter</a>.</li>
 <li>Working with both AI Engines and PL? See the <a href="matlab:XmcExampleApi.getExample('AIE-PL')">tutorials</a> showing how to connect the block libraries in Vitis Model Composer.</li>
 </ul>
 <h1 id="tutorials">Tutorials</h1>
