--- a/Tutorials/README.html
+++ b/Tutorials/README.html
@@ -185,15 +185,6 @@ Hardware Validation of Versal Adaptive SoC Design
 </tr> 
 
 <tr>
-<td>
-<a href="matlab:XmcExampleApi.getExample('07-Export_to_Vitis')">Lab 7</a>
-</td>
-<td>
-Export AI Engine Design from Vitis Model Composer to Vitis <img src="../Images/new.PNG" width="50">
-</td>
-</tr> 
-
-<tr>
 <td align="center" colspan="2" style="bold" ><b>AIE-PL System Development</a></b> <img src="../Images/new.PNG" width="50">
 </tr>
 
@@ -213,12 +204,21 @@ Connecting AI Engine and HDL Subsystems
 <td>
 Connecting AI Engine and HLS Subsystems
 </td>
-</tr> 
+</tr>
+
+<tr>
+<td>
+<a href="matlab:XmcExampleApi.getExample('Export_to_Vitis')">Lab 3</a>
+</td>
+<td>
+Export Design from Vitis Model Composer to Vitis <img src="../Images/new.PNG" width="50">
+</td>
+</tr>  
 
 </table>
 <hr />
 <p>Copyright 2022 Xilinx<br />
-Copyright 2023 Advanced Micro Devices, Inc.</p>
+Copyright 2023-2024 Advanced Micro Devices, Inc.</p>
 <p>Licensed under the Apache License, Version 2.0 (the "License");<br />
 you may not use this file except in compliance with the License.<br />
 You may obtain a copy of the License at</p>
