--- a/Tutorials/AIE-PL/README.html
+++ b/Tutorials/AIE-PL/README.html
@@ -38,6 +38,8 @@ document.location=commandURI
 <p>:warning: AI Engine development must be performed in a Linux environment.</p>
 <h3 id="connecting-ai-engine-and-hdl-subsystemsaie_hdl_tutorialreadmemd"><a href="matlab:XmcExampleApi.getExample('AIE_HDL_tutorial')">Connecting AI Engine and HDL Subsystems</a></h3>
 <h3 id="connecting-ai-engine-and-hls-subsystemsaie_hls_tutorialreadmemd"><a href="matlab:XmcExampleApi.getExample('AIE_HLS_tutorial')">Connecting AI Engine and HLS Subsystems</a></h3>
+<p>The tutorial below will show how to export a heterogeneous design (AI Engine + PL) to Vitis as a Vitis Subsystem (VSS).</p>
+<h3 id="export-design-from-vitis-model-composer-to-vitisexport_to_vitisreadmemd"><a href="matlab:XmcExampleApi.getExample('Export_to_Vitis')">Export Design from Vitis Model Composer to Vitis</a></h3>
 <hr />
 <p>&copy; Copyright 2023 Advanced Micro Devices, Inc.</p>
 <p>Licensed under the Apache License, Version 2.0 (the "License");<br />
