Update copyright statement

--- a/Examples/AIENGINE_plus_PL/AIE_HDL/SingleStreamSSR_FIR_withPL/README.html
+++ b/Examples/AIENGINE_plus_PL/AIE_HDL/SingleStreamSSR_FIR_withPL/README.html
@@ -25,10 +25,11 @@ document.location=commandURI
               
 </html>
 <p>This design showcases a Super Sample Rate FIR filter to process a 4GSPS input stream. In this design we consider latencies within the kernels, which are implemented into the FIFO's included in AXI-Stream Interconnect(PL).</p>
-<p>For more detials on the design of the FIR kernels click <a href="https://github.com/Xilinx/Vitis-Tutorials/blob/master/AI_Engine_Development/Design_Tutorials/02-super_sampling_rate_fir/SingleStreamSSR">here</a>. </p>
-<p><img src="images/SingleStreamSSR_withPL.PNG" alt="" /></p>
+<p>For more details on the design of the FIR kernels click <a href="https://github.com/Xilinx/Vitis-Tutorials/blob/master/AI_Engine_Development/Design_Tutorials/02-super_sampling_rate_fir/SingleStreamSSR">here</a>. </p>
+<p><img src="images/SingleStreamSSR_withPL.PNG" alt="Single Stream SSR with PL" width="800"></p>
 <hr />
-<p>Copyright 2020 Xilinx</p>
+<p>Copyright 2020-2022 Xilinx<br />
+Copyright 2022-2024 Advanced Micro Devices, Inc.</p>
 <p>Licensed under the Apache License, Version 2.0 (the "License");<br />
 you may not use this file except in compliance with the License.<br />
 You may obtain a copy of the License at</p>
