--- a/Tutorials/AIE-PL/Export_to_Vitis/README.html
+++ b/Tutorials/AIE-PL/Export_to_Vitis/README.html
@@ -32,10 +32,14 @@ document.location=commandURI
 <p>This tutorial uses the example design 64K-Pt IFFT @ 2 Gsps Using a 2D Architecture.</p>
 <p>The figure below shows a block diagram of a 64k-point 2D IFFT hardware design implemented in Versal using AI Engines and PL. The design targets a throughput of 2 GSPS.</p>
 <p><img src="Images/ifft64k-block-diagram.png" alt="figure" /></p>
-<p>The IFFT operation is performed by AI Engine kernels, 5 each for each data dimension. The results of the first dimension are transposed by an HLS kernel implemented in PL.</p>
+<p>The IFFT operation is performed by AI Engine kernels, 5 each for each data dimension. The results of the first dimension are transposed by an HLS kernel implemented in PL. The IFFT of the second dimension is then performed in the AI Engine.</p>
+<blockquote>
+<p><strong>NOTE:</strong> The DMA Source and DMA Sink blocks in the PL, shown in the diagram above, will be provided as part of the platform and not the Vitis Subsystem in this tutorial.</p>
+</blockquote>
 <p>For more details on the design, refer to the <a href="https://github.com/Xilinx/Vitis_Model_Composer/tree/2024.2/Examples/AIENGINE_plus_PL/AIE_HLS/IFFT64K_2D">Vitis Model Composer example</a> and the <a href="https://github.com/Xilinx/Vitis-Tutorials/tree/2024.2/AI_Engine_Development/AIE/Design_Tutorials/12-IFFT64K-2D">Design Example from Vitis-Tutorials</a>.</p>
 <p>Open the model <code>IFFT64K_2D.slx</code> and examine the <code>DUT</code> subsystem, which contains an HLS Kernel and an AI Engine subsystem.</p>
 <p><img src="Images/model2.png" alt="figure" /></p>
+<p>The signals entering and exiting the AI Engine are of <code>cint32</code> data type (64 bits wide). The PLIO blocks inside the AI Engine subsystem configure the PLIO width to 64 bits. This means that in hardware, one <code>cint32</code> sample will be transferred across each stream on every PL clock cycle. You could potentially increase the PLIO width to 128 bits, so that 2 samples are transferred on each PL clock cycle.</p>
 <p>When the model runs, the scope displays the real and imaginary output of the IFFT, which is compared to the original input signal. </p>
 <p><img src="Images/results.png" alt="figure1" /></p>
 <h2 id="export-dut-as-vitis-subsystem">Export DUT as Vitis Subsystem</h2>
@@ -69,7 +73,9 @@ document.location=commandURI
 </ul>
 <p>In the next section, we will link and package this VSS with an existing Vitis platform.</p>
 <h2 id="integrating-the-vss-with-vitis-platform">Integrating the VSS with Vitis Platform</h2>
-<p>This tutorial provides a Vitis platform, consisting of:</p>
+<p>A Vitis platform is comprised of a base hardware design and optional system software (e.g. operating system and bootloaders) that target a specific device. </p>
+<p>The platform hardware design is encapsulated in an XSA container built in Vivado, with annotations that indicate potential attachment points used by Vitis tools to integrate additional design components including Vitis Subsystems (VSS), compiled AI Engine graphs, HLS and RTL kernels.&nbsp;</p>
+<p>So far in this tutorial we have generated a Vitis Subsystem from Model Composer. In the rest of the tutorial, we will show how to integrate the generated Vitis Subsystem along with data movers to the platform hardware and add system software to create a working HW image that takes in input test vectors and compare the hardware output with reference data. To do that we need:</p>
 <ul>
 <li>Data movers (implemented in HLS code targeting the PL) to move data between the AI Engine and memory.<ul>
 <li><code>hls_src/ifft_dma_src</code>, <code>hls_src/ifft_dma_sink</code></li></ul></li>
